--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,8 @@ itsdangerous==1.1.0
 Jinja2==2.11.1
 MarkupSafe==1.1.1
 monotonic==1.5
+mysqlclient==1.4.6
+python-dotenv==0.11.0
 python-engineio==3.11.2
 python-socketio==4.4.0
 six==1.14.0
