--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,9 @@ Click==7.0
 dnspython==1.16.0
 eventlet==0.25.1
 Flask==1.1.1
+Flask-Cors==3.0.8
+Flask-HTTPAuth==3.3.0
+Flask-Login==0.5.0
 Flask-SocketIO==4.2.1
 Flask-SQLAlchemy==2.4.1
 greenlet==0.4.15
