--- a/MobileApp/package.json
+++ b/MobileApp/package.json
@@ -17,6 +17,7 @@
     "firebase": "^7.8.2",
     "react": "16.9.0",
     "react-native": "0.61.5",
+    "react-native-gifted-chat": "^0.13.0",
     "react-native-svg": "^11.0.1",
     "react-redux": "^7.1.3",
     "react-router-native": "^5.1.2",
