--- a/MobileApp/package.json
+++ b/MobileApp/package.json
@@ -13,11 +13,17 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.26",
     "@fortawesome/free-solid-svg-icons": "^5.12.0",
     "@fortawesome/react-native-fontawesome": "^0.2.0",
+    "@react-native-community/masked-view": "^0.1.6",
+    "@react-navigation/native": "^5.0.6",
     "axios": "^0.19.2",
     "firebase": "^7.8.2",
     "react": "16.9.0",
     "react-native": "0.61.5",
+    "react-native-gesture-handler": "^1.6.0",
     "react-native-gifted-chat": "^0.13.0",
+    "react-native-reanimated": "^1.7.0",
+    "react-native-safe-area-context": "^0.7.3",
+    "react-native-screens": "^2.0.0-beta.8",
     "react-native-svg": "^11.0.1",
     "react-redux": "^7.1.3",
     "react-router-native": "^5.1.2",
