--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,21 @@
+certifi==2019.11.28
+chardet==3.0.4
 Click==7.0
+dnspython==1.16.0
+eventlet==0.25.1
 Flask==1.1.1
 Flask-Cors==3.0.8
 Flask-SocketIO==4.2.1
+greenlet==0.4.15
+idna==2.8
 itsdangerous==1.1.0
 Jinja2==2.11.1
 MarkupSafe==1.1.1
+monotonic==1.5
+python-dotenv==0.11.0
 python-engineio==3.11.2
 python-socketio==4.4.0
+requests==2.22.0
 six==1.14.0
+urllib3==1.25.8
 Werkzeug==1.0.0
