--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ Flask==1.1.1
 Flask-Cors==3.0.8
 Flask-SocketIO==4.2.1
 greenlet==0.4.15
+gunicorn==20.0.4
 idna==2.8
 itsdangerous==1.1.0
 Jinja2==2.11.1
