--- a/MobileApp/package.json
+++ b/MobileApp/package.json
@@ -15,6 +15,7 @@
     "@fortawesome/react-native-fontawesome": "^0.2.0",
     "@react-native-community/masked-view": "^0.1.6",
     "@react-navigation/native": "^5.0.6",
+    "@react-navigation/stack": "^5.0.6",
     "axios": "^0.19.2",
     "firebase": "^7.8.2",
     "react": "16.9.0",
