--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+cachetools==4.0.0
 certifi==2019.11.28
 chardet==3.0.4
 Click==7.0
@@ -6,17 +7,27 @@ eventlet==0.25.1
 Flask==1.1.1
 Flask-Cors==3.0.8
 Flask-SocketIO==4.2.1
+google-api-core==1.16.0
+google-auth==1.11.2
+google-cloud-language==1.3.0
+googleapis-common-protos==1.51.0
 greenlet==0.4.15
+grpcio==1.27.2
 gunicorn==20.0.4
 idna==2.8
 itsdangerous==1.1.0
 Jinja2==2.11.1
 MarkupSafe==1.1.1
 monotonic==1.5
+protobuf==3.11.3
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
 python-dotenv==0.11.0
 python-engineio==3.11.2
 python-socketio==4.4.0
+pytz==2019.3
 requests==2.22.0
+rsa==4.0
 six==1.14.0
 urllib3==1.25.8
 Werkzeug==1.0.0
